2009-07-27 12:18-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSWindow.h: Comment out _attachedSheet ivar.
	* Source/NSAlert.m: Change code to use hightlightWithLevel: method
	in resetWindow method.
	* Source/NSApplication.m: Stub out setAttachedSheet method.
	* Source/NSWindow.m: Remove new ivar for next release and stub out
	attachedSheet method.

2009-07-26 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSFontDescriptor.h,
	* Headers/AppKit/NSFont.h: Add missing interface method from 10.5.
	* Source/NSFontDescriptor.m,
	* Source/NSFont.m: Small fixes for font descriptor handling.

2009-07-25 22:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: Offset color by less in -resetWindow.  Remove
	redundant logic for calling the "didEnd" method in the NSBeginSheet...
	functions.
	* Source/NSApplication.m: Add code to reset parent window in 
	beginSheet:... method.  Also added check to make sure the
	modalDelegate is not nil.

2009-07-25 20:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: Remove category for setAttachedSheet method.
	* Source/NSApplication.m: Added private category to add 
	setAttachedSheet: to NSWindow.  Modified beginSheet:... method
	to call the new method with the sheet that is associated with it.

2009-07-25 20:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: GSAlertSheet - removed unecessary parentWindow 
	and  container ivars in interface declaration.  Removed uneeded
	accessors for parentWindow and contentRect.  Added check in
	frameFromParentWindowFrame to check to see if parent is initialized
	prior to using it.   Removed NSBox in the init.. method since it 
	could cause issues with drawing.   Added code to lighten the 
	color of the background of the sheet relative to the parent window.

2009-07-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-initWithCoder:, -setTextContainer:):