@@ -1,3 +1,9 @@
+2009-07-28 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSDocument.m (-setFileName:): Set the file name to the
+	absolute file path.
+	Patch by Jonathan Gillaspie <jonathan.gillaspie@testplant.com>.
+
 2009-07-27 12:18-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/AppKit/NSWindow.h: Comment out _attachedSheet ivar.
